[gd_scene load_steps=9 format=2]

[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Control/interface/returnToNormalModeSelectWorld.gd" type="Script" id=2]
[ext_resource path="res://View/util/CompletionBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Control/interface/NormalModeSelectDifficulty.gd" type="Script" id=4]
[ext_resource path="res://Model/buttons/gameModeButtons/PrimaryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Model/buttons/gameModeButtons/IntermediateButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Model/buttons/gameModeButtons/AdvancedButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=8]

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Header" parent="TemplateScreen" index="3"]
margin_left = 371.916
margin_right = -536903.0
text = "NORMAL MODE"

[node name="PlayBoard" parent="." index="1"]
margin_top = 92.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 555.0
margin_bottom = 431.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletionBox" parent="PlayBoard/MarginContainer/VBoxContainer" index="0" instance=ExtResource( 3 )]
margin_top = 11.0
margin_right = 535.0
margin_bottom = 61.0

[node name="TopicName" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 71.0
margin_right = 535.0
margin_bottom = 110.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "Insert World Name Here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyDiv" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="2"]
margin_top = 120.0
margin_right = 535.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 280 )
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PrimaryButton" parent="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv" index="0" instance=ExtResource( 5 )]
margin_left = 13.0
margin_right = 163.0
script = null

[node name="IntermediateButton" parent="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv" index="1" instance=ExtResource( 6 )]
margin_left = 192.0
margin_right = 342.0
script = null

[node name="AdvancedButton" parent="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv" index="2" instance=ExtResource( 7 )]
margin_left = 371.0
margin_right = 521.0
script = null

[node name="BackButton" parent="." index="2"]
script = ExtResource( 2 )
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv/PrimaryButton" to="." method="_on_PrimaryButton_pressed"]
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv/IntermediateButton" to="." method="_on_IntermediateButton_pressed"]
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/DifficultyDiv/AdvancedButton" to="." method="_on_AdvancedButton_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
